# ChangeLog for dev-python/spyder
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/spyder/ChangeLog,v 1.5 2010/03/30 02:32:15 grozin Exp $

*spyder-1.0.3 (30 Mar 2010)

  30 Mar 2010; Andrey Grozin <grozin@gentoo.org> -spyder-1.0.1.ebuild,
  +spyder-1.0.3.ebuild:
  Version bump

  04 Dec 2009; Andrey Grozin <grozin@gentoo.org> -spyder-1.0.0.ebuild:
  Cleaning an old version

  03 Dec 2009; Markus Meier <maekke@gentoo.org> spyder-1.0.1.ebuild:
  add ~amd64, bug #292564

*spyder-1.0.1 (10 Nov 2009)

  10 Nov 2009; Andrey Grozin <grozin@gentoo.org> +spyder-1.0.1.ebuild:
  Version bump, thanks to David Voge <davidvoge@gmail.com> (bug #292564)

*spyder-1.0.0 (20 Oct 2009)

  20 Oct 2009; Andrey Grozin <grozin@gentoo.org> +spyder-1.0.0.ebuild,
  +metadata.xml:
  Initial import
