@@ -1,8 +1,10 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/spyder/Attic/spyder-1.0.3.ebuild,v 1.1 2010/03/30 02:32:15 grozin Exp $
-EAPI=2
-NEED_PYTHON=2.5
+# $Header: /var/cvsroot/gentoo-x86/dev-python/spyder/Attic/spyder-1.0.3.ebuild,v 1.2 2010/03/30 13:39:50 grozin Exp $
+EAPI=3
+SUPPORT_PYTHON_ABIS=1
+RESTRICT_PYTHON_ABIS="3.*"
+PYTHON_DEPEND="2:2.5"
 inherit distutils
 
 DESCRIPTION="Python IDE with matlab-like features"
